<resources>
    <string name="app_name">微信</string>

    <string name="action_search">查找</string>
    <string name="action_add">添加</string>

    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_group_news">查看新闻</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfrends">添加朋友</string>
    <string name="menu_scan">扫一扫</string>

    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>

    <string name="edit_hint_text">键入要发送的内容</string>
    <string name="send_btn_text">发送</string>

    <string name="news_content">新闻内容</string>


    <string name="login_activity">登录</string>
    <string name="login_account_label">账号</string>
    <string name="login_account_hint">请输入您的账号</string>
    <string name="login_password_label">密码</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="login_button_label">登录</string>
    <string name="login_remember_pass_label">记住密码</string>

    <string name="force_offline">强制下线</string>
    <string name="force_offline_button">确定</string>
    <string name="force_offline_title">警告</string>
    <string name="force_offline_message">账号在别处登录，系统将强制下线，请尝试重新登录</string>


    <string name="system_settings_label">系统设置</string>
    <string name="create_database_button">创建数据库</string>
    <string name="syetem_settings_name">姓名</string>
    <string name="syetem_settings_age">年龄</string>
    <string name="syetem_settings_married">婚否</string>

</resources>