<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@mipmap/actionbar_search_icon"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_group_news"
        android:icon="@mipmap/menu_group_news_icon"
        android:title="@string/menu_group_news" />

    <item
        android:id="@+id/action_group_chat"
        android:icon="@mipmap/menu_group_chat_icon"
        android:title="@string/menu_group_chat" />

    <item
        android:id="@+id/action_addfrend"
        android:icon="@mipmap/menu_add_icon"
        android:title="@string/menu_addfrends" />

    <item
        android:id="@+id/action_scan"
        android:icon="@mipmap/men_scan_icon"
        android:title="@string/menu_scan" />

    <item
        android:id="@+id/action_feedback"
        android:icon="@mipmap/menu_feedback_icon"
        android:title="@string/menu_feedback" />

</menu>
