<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/login_account_label" />

        <EditText
            android:id="@+id/login_account"
            android:layout_height="wrap_content"
            android:hint="@string/login_account_hint" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/login_password_label" />

        <EditText
            android:id="@+id/login_password"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/login_button"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/login_button_label" />
    </TableRow>

</TableLayout>