<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/tab_bg">

        <com.telchina.wx.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:c_icon="@mipmap/ic_menu_start_conversation"
            hyman:c_color="#0000ff"
            hyman:c_text="@string/app_name"
            hyman:c_text_size="12sp"
            android:layout_height="fill_parent" />

        <com.telchina.wx.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:c_icon="@mipmap/ic_menu_friendslist"
            hyman:c_color="#ff0000"
            hyman:c_text="@string/tab_contact"
            hyman:c_text_size="12sp"
            android:layout_height="fill_parent" />

        <com.telchina.wx.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:c_icon="@mipmap/ic_menu_emoticons"
            hyman:c_color="#00ff00"
            hyman:c_text="@string/tab_found"
            hyman:c_text_size="12sp"
            android:layout_height="fill_parent" />

        <com.telchina.wx.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:c_icon="@mipmap/ic_menu_allfriends"
            hyman:c_color="#00ffff"
            hyman:c_text="@string/tab_me"
            hyman:c_text_size="12sp"
            android:layout_height="fill_parent" />

    </LinearLayout>

</LinearLayout>
